# simple-otel

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  build-simple-otel.sh  how-to-build.sh
.github/workflows/: cmake-build-test.yml
cmake/: common.cmake
proto/collector/: log_service.proto  metric_service.proto  span_service.proto
proto/common/: endpoint.proto  source_type.proto  tag.proto
proto/model/: log.proto  metric.proto  span.proto
src/: client.cpp  grpc_client.cpp  grpc_server.cpp  main.cpp  server.cpp  tcp_exporter_server.cpp
src/common/: ThreadSafeQueue.h  period_task.cpp  period_task.h  tcp_exporter.cpp  tcp_exporter.h  unique_ptr.h
src/log/: grpc_log_exporter.cpp  grpc_log_exporter.h  log.h  log_exporter.h  log_processor.h  log_record.h  logger.cpp  logger.h  logger_factory.cpp  logger_factory.h  ostream_log_exporter.cpp  ostream_log_exporter.h
src/log/exporter/: file_log_exporter.cpp  file_log_exporter.h  log_exporter.h  ostream_log_exporter.cpp  tcp_log_exporter.cpp  tcp_log_exporter.h
src/log/processor/: batch_log_processor.cpp  batch_log_processor.h  log_processor.h  simple_log_processor.cpp  simple_log_processor.h
src/metric/: metric_collector.cpp  metric_collector.h  metric_record.h
src/metric/exporter/: file_metric_exporter.cpp  file_metric_exporter.h  grpc_metric_exporter.cpp  grpc_metric_exporter.h  metric_exporter.h  ostream_metric_exporter.cpp  ostream_metric_exporter.h  tcp_metric_exporter.cpp  tcp_metric_exporter.h
src/protocol/: message.cpp  message.h
src/trace/: endpoint.h  ostream_exporter.cpp  ostream_exporter.h  ostream_span_exporter.cpp  ostream_span_exporter.h  post_sample_processor.cpp  post_sample_processor.h  resp_context.h  sampler.h  server_context.cpp  span.cpp  span.h  span_context.cpp  span_context.h  span_exporter.cpp  span_exporter.h  span_metadata.h  span_processor.cpp  span_processor.h  trace.cpp  trace.h  trace_context.h  trace_metadata.h  trace_provider.cpp  trace_provider.h
src/trace/exporter/: file_span_exporter.cpp  file_span_exporter.h  grpc_span_exporter.cpp  grpc_span_exporter.h  ostream_span_exporter.cpp  ostream_span_exporter.h  span_exporter.h  tcp_span_exporter.cpp  tcp_span_exporter.h
src/trace/processor/: batch_span_processor.cpp  batch_span_processor.h  post_sample_processor.cpp  post_sample_processor.h  span_processor.cpp  span_processor.h
src/trace/sampler/: alway_on_sampler.h  always_off_sampler.h  head_variant_sampler.cpp  head_variant_sampler.h  post_sampler.h  random_sampler.h  sampler_factory.cpp  sampler_factory.h  tail_sampler.h
src/utils/: id_generator.h  timestamp_generator.h
test/: grpc_span_exporter_test.cpp  logger_test.cpp  main.cpp  metric_collector_test.cpp  period_task_test.cpp  span_exporter_test.cpp
